[package]
name = "rosu-pp-py"
version = "1.0.1"
edition = "2021"
authors = ["Max Ohn <ohn.m@hotmail.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaxOhn/rosu-pp-py"
description = "Difficulty and performance calculation for osu!"

[lib]
name = "rosu_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "macros"] }
rosu-pp = { version = "1.0.0", features = ["sync"] }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
