[package]
name = "rosu-pp-py"
version = "3.1.0"
edition = "2021"
authors = ["Max Ohn <ohn.m@hotmail.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaxOhn/rosu-pp-py"
description = "Difficulty and performance calculation for osu!"

[lib]
name = "rosu_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "macros"] }
rosu-mods = { version = "0.3.0", default-features = false, features = ["serde"] }
rosu-pp = { version = "3.1.0", features = ["sync"] }
serde = { version = "1.0.203" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
