[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "rosu-pp-py"
version = "3.1.0"
requires-python = ">=3.7"
description = "Difficulty and performance calculation for osu!"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [{ name = "Max Ohn", email = "ohn.m@hotmail.de" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]