[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "rosu-pp-py"
version = "4.0.1"
requires-python = ">=3.11"
description = "Difficulty and performance calculation for osu!"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [{ name = "Max Ohn", email = "ohn.m@hotmail.de" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.maturin.dev-dependencies]
pytest = ">=8"

[tool.ruff]
target-version = "py311"
exclude = ["rosu_pp_py.pyi"]

[tool.ruff.lint]
select = ["E", "F", "I"]
