[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "rosu-pp-py"
version = "4.0.2"
requires-python = ">=3.11"
description = "Difficulty and performance calculation for osu!"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [{ name = "Max Ohn", email = "ohn.m@hotmail.de" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.maturin.dev-dependencies]
pytest = ">=8"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors (line length, syntax errors, etc.)
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax for target Python version)
]
ignore = ["E501"]  # line length - docstrings in stubs are hard to wrap

[tool.ruff.lint.isort]
known-first-party = ["rosu_pp_py"]
